Fix item type icons broken on 2x screens
Icons preloading introduced in 247755c5 overrides entire background
property, not just background-image. On 2x screens (and anywhere else
where svg icons need to be scaled) icons need property `background-size:
contain` to be displayed correctly. This previously came from
`.icon-css` class but have been overriden by code generated in
`svgicon`, so to fix this, these properties need to be added to the
`svgicon`.

--- a/scss/components/_icons.scss
+++ b/scss/components/_icons.scss
@@ -14,9 +14,6 @@
 
 .icon-css {
   display: inline-block;
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center;
   vertical-align: middle;
 }
 
